--- a/content/css/style.css
+++ b/content/css/style.css
@@ -57,6 +57,10 @@ a:hover {
   color: #ce2020;
 }
 
+.socials {
+  align: right;
+}
+
 svg.social {
   height: 3em;
   padding: 1em;
@@ -74,7 +78,7 @@ svg.button {
 .slogan {
   font-size: 15px;
   font-style: italic;
-  margin: 170px 40px 0 0;
+  margin: 20px 40px 0 0;
   color: #777;
   text-align: right;
   width: 660px;
