--- a/content/css/gallery.css
+++ b/content/css/gallery.css
@@ -4,6 +4,7 @@ div.gallery {
 
 img.gallery {
   margin: 20px;
+  max-width: 700px;
 }
 
 .video {
@@ -12,5 +13,6 @@ img.gallery {
 }
 
 div.preamble {
+  text-align: left;
   padding: 10px;
 }
