--- a/content/css/style.css
+++ b/content/css/style.css
@@ -30,6 +30,14 @@ li {
   padding: 2px 15px;
 }
 
+ul > li {
+  padding: 0 0;
+}
+
+ul > li > ul {
+  padding: 0.2em 1em;
+}
+
 table {
   width: 100%;
   padding: 15px 60px;
