--- a/content/css/style.css
+++ b/content/css/style.css
@@ -31,11 +31,15 @@ li {
 }
 
 ul > li {
-  padding: 0 0;
+  padding: 0.2em 0;
 }
 
 ul > li > ul {
   padding: 0.2em 1em;
+}
+
+ul > li > ul > li {
+  padding: 0.1em 0;
 }
 
 table {
